--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
 	body
 		.grid
 			.header
-				a.logo(href="https://revspace.nl/"): img(src=`${pathPrefix}/images/logo.png`)
+				a.logo(href="https://bitlair.nl/"): img(src=`${pathPrefix}/images/logo.png`)
 				h1: a(href=`${pathPrefix}/`) Works in Progress
 
 			.contents
