--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .header {
-	background-color: #003e00;
+	background-color: #333;
 	color: white;
 }
 
@@ -26,7 +26,7 @@ h1 {
 
 h1 a {
 	text-decoration: none;
-	color: white;
+	color: #fc5d1d;
 }
 
 h1 a:hover {
@@ -36,6 +36,7 @@ h1 a:hover {
 .logo {
 	float: right;
 	text-decoration: none;
+	margin-right: 32px;
 }
 
 h2 {
@@ -93,7 +94,7 @@ img.large {
 	justify-content: center;
 	text-align: center;
 
-	color: white;
+	color: #fc5d1d;
 	text-decoration: none;
 	font-size: 48px;
 
