--- a/views/view.pug
+++ b/views/view.pug
@@ -1,17 +1,17 @@
 extends layout
 
 block meta
-	meta(property="og:title" content="RevSpace Works in Progress")
+	meta(property="og:title" content="Bitlair Works in Progress")
 	meta(property="og:type" content="website")
 	meta(property="og:description" content=photo.filename)
 	meta(property="og:image" content=absoluteThumbnail)
 
-	meta(property="twitter:title" content="RevSpace Works in Progress")
+	meta(property="twitter:title" content="Bitlair Works in Progress")
 	meta(property="twitter:card" content="summary_large_image")
 	meta(property="twitter:description" content=photo.filename)
 	meta(property="twitter:image" content=absoluteThumbnail)
 
-	meta(itemprop="name" content="RevSpace Works in Progress")
+	meta(itemprop="name" content="Bitlair Works in Progress")
 	meta(itemprop="description" content=photo.filename)
 	meta(itemprop="image" content=absoluteThumbnail)
 
